--- a/software.html
+++ b/software.html
@@ -39,16 +39,36 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1832383'>Job Application for Software Engineer - Summer Intern 2020 at Dataminr</a></h5> 
+<h5><a href='https://loxo.co/job/279986?t=1572352968957'>Software Engineer - LAMP Stack - TIER4 GROUP</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://www.cv-library.co.uk/job/211098088/Lead-Software-Engineer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Lead Software Engineer | CV-Library.co.uk | 211098088</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://www.womenwhocode.com/jobs/5444?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Software Engineer - Red Hat | Women Who Code</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1914739'>Job Application for Senior Software Engineer_Marketing Platform at Coupang</a></h5> 
+<p><span class="badge badge-light">Shanghai</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1914938'>Job Application for Principal Software Engineer_Marketing Platform at Coupang</a></h5> 
+<p><span class="badge badge-light">Shanghai</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1832383'>Job Application for Software Engineer - Summer Intern 2020 at Dataminr</a></h5> 
+<p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698365556-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698365654-software-engineer-backend'>BlaBlaCar Software Engineer Backend | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698367180-embedded-software-engineer'>Bosch Group Embedded Software Engineer | SmartRecruiters</a></h5> 
@@ -56,7 +76,7 @@
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/agari/jobs/4498479002'>Job Application for Backend Software Engineer, AIR at Agari</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Foster City United States Raleigh, North Carolina United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/si/jobs/1936788'>Job Application for Senior Full-Stack Software Engineer at SimplyInsured</a></h5> 
@@ -125,7 +145,7 @@
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4491130002'>Job Application for Software Engineer at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4491130002'>Job Application for Software Engineer at Twitch</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -137,7 +157,7 @@
 <p><span class="badge badge-light">Hyderabad, India  Hyderabad, India</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mintel/jobs/1928318'>Job Application for Senior Software Engineer - Big Data Platform at Mintel</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mintel/jobs/1928318'>Job Application for Senior Software Engineer - Big Data Platform at Mintel</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -177,7 +197,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bjss/jobs/1931346'>Job Application for Software Engineer  at BJSS</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bjss/jobs/1931346'>Job Application for Software Engineer  at BJSS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -193,7 +213,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/j2-global/job/olsnbfw5'>J2 Global Careers - Java - Cloud Software Developer - Vipre</a></h5> 
+<h5><a href='http://jobs.jobvite.com/j2-global/job/olsnbfw5'>J2 Global Careers - Java - Cloud Software Developer - Vipre</a></h5> 
 <p><span class="badge badge-light">Herndon, Virginia  Vancouver Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -249,11 +269,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o1K89fwM&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nwZRmMwZ'>Palo Alto Networks Careers - Software Engineer - Malware Signatures</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o1K89fwM&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nwZRmMwZ'>Palo Alto Networks Careers - Software Engineer - Malware Signatures</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/deputy/e5d01de8-41f2-4e8c-8331-b006287c83dc'>Deputy - Junior Software Engineer - Implementations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/deputy/e5d01de8-41f2-4e8c-8331-b006287c83dc'>Deputy - Junior Software Engineer - Implementations</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -301,7 +321,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=o2za8fwD&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nUyLmMwQ'>Gigamon Careers - Staff Software Engineer - Data Storage, ETL and Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=o2za8fwD&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nUyLmMwQ'>Gigamon Careers - Staff Software Engineer - Data Storage, ETL and Analytics</a></h5> 
 <p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -337,7 +357,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://olo.applytojob.com/apply/rkGJCwhYVp/Software-Engineer-BackEnd-Developer'>Software Engineer - Back-End Developer - Olo - Career Page</a></h5> 
+<h5><a href='http://olo.applytojob.com/apply/rkGJCwhYVp/Software-Engineer-BackEnd-Developer'>Software Engineer - Back-End Developer - Olo - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -405,7 +425,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698331369-director-software-engineering'>PayScale Director, Software Engineering | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698331369-director-software-engineering'>PayScale Director, Software Engineering | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -424,26 +444,6 @@
 <h5><a href='http://autodata.applytojob.com/apply/qzCFoylCkC/NET-Software-Developer'>.NET Software Developer - Autodata Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light">Calgary, ABCanada     Calgary, AB</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://opentextats.avature.net/careers/JobDetail/Pasadena-California-United-States-Software-Engineer/26445'>Software Engineer - US, CA, Pasadena - 26445</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://opentextats.avature.net/careers/JobDetail/Pasadena-California-United-States-Software-Engineer/26446'>Software Engineer - US, CA, Pasadena - 26446</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/savioke.com/af856012-7bf7-4d37-861c-468f9639d49d'>Savioke - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light">San Jose, California</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://itatalentportal.com/job/senior-software-engineer-37063-enus/51249812/'>Senior Software Engineer - 37063-en_US Job Opening in Chicago, Illinois - Illinois Technology Association Career Center</a></h5> 
-<p><span class="badge badge-light">Chicago, Illinois</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oyza8fw9&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=n62smMwd'>Gigamon Careers - Senior Staff Software Engineer - API &amp; Backend</a></h5> 
-<p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
